# sassycode

./: .gitignore  README.md  env.example  pyproject.toml
manager/: __init__.py  __main__.py  app.py  db.py  models.py
manager/static/: app.js  style.css
manager/templates/: index.html  project.html  project_edit.html  scan.html  schedules.html  unique_all.html
scanner/: __init__.py  cli.py
